[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tilesheets/colored_transparent.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Goblin.gd" type="Script" id=3]
[ext_resource path="res://Animations/goblin_move.tres" type="Animation" id=4]
[ext_resource path="res://Animations/goblin_hit.tres" type="Animation" id=5]
[ext_resource path="res://Animations/goblin_death.tres" type="Animation" id=6]
[ext_resource path="res://SFX/RPG Sound Pack/NPC/ogre/ogre1.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/RPG Sound Pack/NPC/ogre/ogre3.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/RPG Sound Pack/NPC/ogre/ogre4.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 3.65632

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -1.96515, -6.89723, -1.96515, -5.82033, -2.90159, -5.82033, -2.90159, -3.90062, -5.05541, -3.90062, -5.02403, 0.0510311, -5.90096, 0.0510311, -5.93603, 5.8738, -2.98957, 6.92611, 2.97351, 6.92611, 5.8849, 5.8738, 5.90096, 0.172903, 4.87088, 0.172903, 4.87088, -3.8538, 2.95117, -3.8538, 2.95117, -5.86715, 1.82744, -5.86715, 1.82744, -6.89723 )

[sub_resource type="Animation" id=3]
resource_name = "goblin_move_stop"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 8.4792

[sub_resource type="CircleShape2D" id=5]
radius = 7.18663

[sub_resource type="CircleShape2D" id=6]
radius = 67.6563

[node name="Goblin" instance=ExtResource( 1 )]
script = ExtResource( 3 )
acceleration = 125
max_speed = 60
friction = 125

[node name="Sprite" parent="." index="0"]
self_modulate = Color( 0.611765, 0.705882, 0.427451, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 427, 35, 12, 14 )

[node name="CollisionShape2D" parent="." index="1"]
visible = false
shape = SubResource( 1 )

[node name="LightOccluder2D" parent="." index="2"]
visible = false
occluder = SubResource( 2 )

[node name="MoveAnimation" parent="." index="4"]
anims/goblin_move = ExtResource( 4 )
anims/goblin_move_stop = SubResource( 3 )

[node name="HitAnimation" parent="." index="5"]
anims/goblin_hit = ExtResource( 5 )

[node name="DeathAnimation" parent="." index="6"]
anims/goblin_death = ExtResource( 6 )

[node name="MoveSpeedTimer" type="Timer" parent="." index="7"]
process_mode = 0
wait_time = 3.0

[node name="IdleAudio" parent="." index="9"]
stream = ExtResource( 7 )
volume_db = -9.0
pitch_scale = 0.9

[node name="HitAudio" parent="." index="10"]
stream = ExtResource( 8 )
volume_db = -9.0
pitch_scale = 0.9

[node name="DeathAudio" parent="." index="11"]
stream = ExtResource( 9 )
volume_db = -9.0
pitch_scale = 0.9

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
shape = SubResource( 4 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
shape = SubResource( 5 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
shape = SubResource( 6 )

[node name="Stats" parent="." index="15"]
max_health = 8
knockback_multiplier = 1.1
[connection signal="timeout" from="MoveSpeedTimer" to="." method="_on_MoveSpeedTimer_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="PlayerDetectionZone"]
